		systems.
		Fixed the binkp escape sequence which is wrong in the FSP, this
		is selectable in the nodes setup.
		A light improvement in session handshake setup timers.
		Added EMSI handshake timers, this gives a more relaxed EMSI
		handshake.
		Set the EMSI receive failure count to 20 instead of 6, we can
		now even accept buggy maindoor sessions and still display a
		banner.

	mbsetup:
		In the nodes setup a switch is added to fallback to the wrong
		binkp escape method.


v0.37.5		12-Jul-2003 - 10-Aug-2003

	upgrade:
		Check settings menu 1.5.21 for maximum allowed logins.

	global:
		Added switches for binkp CRC mode in global and node records.

	common.a:
		Node locking tests for non-stale lockfiles older then 6 hours.
		Added general code for prgram locking.

	mbcico:
		Implemented CRAM rev.4 change in binkp driver.
		Binkp now reports binkp/1.1, if filerequests are allowed.
		Binkp now only sends Wazoo requests if the remote is binkp/1.1
		and file requests are allowed.
		Binkp now sends M_BSY to the remote when the bbs is closed.
		Better logging of BSY and ERR messages.

	mbsebbs:
		Added check for maximum simultaneous logins.
		Removed debug logging for userrecord i/o
		During virusscan of file uploads, the mbtask timeout timer is
		set to one hour to support very long scans.
		Changed logging during user login.
		Fixed bugs in QWK mail upload processing.
		Allow - and _ in email names (GetstrU function).

	mbsetup:
		Added menu entry 1.5.21 for setting maximum allowed logins.
		Added program locking, only one mbsetup can run at the same
		time.
		In menu 1.14 added global switch to disable binkp CRC32 file
		transfers.
		In menu 7.x.3 added a switch to enable binkp CRC32 file
		transfers with this node.

	mbtask:
		On new installations sets max logins to 1.
		Now uses standard locking in ~/var/run
		When idle, it now reports the time to the next event to be
		seen in mbmon menu 1.
		With startup it now shows the tty flags in the log.